terminal api renames, camera method is removed
